# leprosorium-captcha-recognizer

./: .gitignore  LICENSE  README.md  leprosorium-captcha-recognizer.cabal
src/: GeneticAlgorithmStepMain.hs  LeprosoriumCaptchaRecognizerMain.hs  NeuralNetworkBackpropagationMain.hs
src/Captcha/Leprosorium/: Recognizer.hs
src/Captcha/Leprosorium/Data/: Testset.hs  Trainset.hs
src/Captcha/Leprosorium/Recognizer/: Compress.hs  GeneticAlgorithm.hs  NeuralNetwork.hs  Preprocess.hs
